apps/meme-giver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: better-app
  namespace: meme-giver
spec:
  tls:
  - hosts:
    - meme.boredotter.dev
    secretName: meme-giver-tls
  rules:
  - host: meme.boredotter.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meme-giver-service
            port:
              number: 80
